cmake_minimum_required(VERSION "3.30.0")

project("C++ Review")

set (CMAKE_CXX_STANDARD 14)

add_executable(1_hello_world 1_hello_world.cpp)
add_executable(2_addition 2_addition.cpp)
add_executable(3_arithmetic 3_arithmetic.cpp)
add_executable(4_comparisons 4_comparisons.cpp)
add_executable(5_conditionals 5_conditionals.cpp)
add_executable(6_using_keyword 6_using_keyword.cpp)
add_executable(7_for_loops 7_for_loops.cpp)
add_executable(8_while_loops 8_while_loops.cpp)
add_executable(9_functions 9_functions.cpp)
add_executable(10_classes 10_classes.cpp)
add_executable(11_headers 11_headers.cpp kitty.cpp)
